# dispatch

./: .gitignore  Makefile.am  Makefile.in  README.md  bootstrap.sh  configure  configure.ac
src/: dispatch.c  dispatch.h  files.c  files.h  tools.c  tools.h
test/: callgind_pass  massif_pass  optim_test  unit_test  valgrind_pass
